--- a/app/src/main/res/layout/activity_gate.xml
+++ b/app/src/main/res/layout/activity_gate.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.truemind.swingbeat.MainActivity">
+    tools:context="com.truemind.swingbeat.ui.GateActivity">
 
     <TextView
         android:layout_width="wrap_content"
