--- a/app/src/main/res/layout/activity_gate.xml
+++ b/app/src/main/res/layout/activity_gate.xml
@@ -1,18 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.truemind.swingbeat.ui.GateActivity">
+    android:background="#fff"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="132dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/gate_top_img" />
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#e5e5e5"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtGoHomePage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/goHomePage"
+            android:textColor="#000"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_marginTop="24dp"
+                    style="@style/btnBaseStyle1">
+
+                    <ImageButton
+                        android:id="@+id/btnDrum"
+                        style="@style/gateBtnStyle"
+                        android:background="@drawable/s_btn_drum" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout style="@style/gateTextBase">
+
+                            <TextView
+                                android:id="@+id/textDrumTitle"
+                                style="@style/gateTextTop"
+                                android:text="@string/virtual_drum" />
+
+                            <TextView
+                                android:id="@+id/textDrumText1"
+                                style="@style/gateTextBelow"
+                                android:text="@string/virtual_drumText1" />
+
+                            <TextView
+                                android:id="@+id/textDrumText2"
+                                style="@style/gateTextBelow"
+                                android:text="@string/virtual_drumText2" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/btnBaseStyle1"
+                    android:layout_marginTop="34dp">
+
+                    <ImageButton
+                        android:id="@+id/btnGame"
+                        style="@style/gateBtnStyle"
+                        android:background="@drawable/s_btn_game" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout style="@style/gateTextBase">
+
+                            <TextView
+                                android:id="@+id/textGameTitle"
+                                style="@style/gateTextTop"
+                                android:text="@string/rythm_game" />
+
+                            <TextView
+                                android:id="@+id/textGameText1"
+                                style="@style/gateTextBelow"
+                                android:text="@string/rythm_gameText1" />
+
+                            <TextView
+                                android:id="@+id/textGameText2"
+                                style="@style/gateTextBelow"
+                                android:text="@string/rythm_gameText2" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/btnBaseStyle1"
+                    android:layout_marginTop="34dp">
+
+                    <ImageButton
+                        android:id="@+id/btnTest"
+                        style="@style/gateBtnStyle"
+                        android:background="@drawable/s_btn_test" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout style="@style/gateTextBase">
+
+                            <TextView
+                                android:id="@+id/textTestTitle"
+                                style="@style/gateTextTop"
+                                android:text="@string/speed_test" />
+
+                            <TextView
+                                android:id="@+id/textTestText1"
+                                style="@style/gateTextBelow"
+                                android:text="@string/speed_testText1" />
+
+                            <TextView
+                                android:id="@+id/textTestText2"
+                                style="@style/gateTextBelow"
+                                android:text="@string/speed_testText2" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </ScrollView>
+
+        <ImageButton
+            android:layout_gravity="end|bottom"
+            android:id="@+id/btnBT"
+            android:layout_margin="20dp"
+            android:layout_width="100dp"
+            android:layout_height="26dp"
+            android:background="@drawable/s_btn_bt_dark" />
+
+    </FrameLayout>
+
+
+</LinearLayout>
+
