--- a/app/src/main/res/layout/activity_drum.xml
+++ b/app/src/main/res/layout/activity_drum.xml
@@ -86,4 +86,13 @@
         android:background="@drawable/s_btn_setting_white"
         android:layout_gravity="start|bottom"/>
 
+    <ImageButton
+        android:id="@+id/play"
+        android:layout_width="30dp"
+        android:layout_height="36dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/s_check_play"
+        android:layout_gravity="start|top"/>
+
 </FrameLayout>
