--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,7 +77,7 @@
 
     <style name="settingSpinnerStyle">
         <item name="android:background">@drawable/spinner</item>
-        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_width">400dp</item>
         <item name="android:layout_height">30dp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginLeft">30dp</item>
@@ -90,6 +90,33 @@
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="rhythmLaneBase">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">58dp</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:weightSum">640</item>
+    </style>
+
+    <style name="rhythmLaneFrame">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">516</item>
+    </style>
+
+    <style name="rhythmBtnStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">53</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="rhythmBtnTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
 </resources>
