--- a/app/src/main/res/layout/activity_rhythm_new.xml
+++ b/app/src/main/res/layout/activity_rhythm_new.xml
@@ -18,62 +18,68 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_gravity="center"
+                android:id="@+id/tv_combo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"
                 android:textColor="#000"
-                android:textSize="64sp"
-                android:text="0"/>
+                android:textSize="64sp" />
 
             <TextView
-                android:layout_gravity="center"
+                android:id="@+id/tv_rhythm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/combo"
                 android:textColor="#000"
-                android:textSize="24sp"
-                android:text="@string/combo"/>
+                android:textSize="24sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
             android:orientation="vertical">
 
             <TextView
-                android:layout_marginTop="14dp"
+                android:id="@+id/tv_current"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:text="@string/perfect"
                 android:textColor="#000"
-                android:textSize="44sp"
-                android:text="@string/perfect"/>
+                android:textSize="44sp" />
 
             <LinearLayout
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                
-                <ImageView
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:background="@null"
-                    android:src="@drawable/timer_on" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
 
                 <ImageView
-                    android:layout_marginLeft="10dp"
+                    android:id="@+id/timer1"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
                     android:background="@null"
                     android:src="@drawable/timer_off" />
 
                 <ImageView
-                    android:layout_marginLeft="10dp"
+                    android:id="@+id/timer2"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@null"
                     android:src="@drawable/timer_off" />
-                
+
+                <ImageView
+                    android:id="@+id/timer3"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@null"
+                    android:src="@drawable/timer_off" />
+
             </LinearLayout>
 
         </LinearLayout>
@@ -81,22 +87,23 @@
         <View
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <LinearLayout
-            android:layout_marginTop="14dp"
-            android:layout_marginRight="29dp"
             android:layout_width="90dp"
             android:layout_height="30dp"
-            android:gravity="center"
-            android:background="@drawable/btn_quit">
+            android:layout_marginRight="29dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/btn_quit"
+            android:gravity="center">
 
             <TextView
+                android:id="@+id/quit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:text="Quit"
                 android:textColor="#fff"
-                android:text="Quit"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -116,22 +123,28 @@
             android:background="@drawable/rhythm_lane1">
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move1_1"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move1_2"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move1_3"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
             
         </FrameLayout>
 
@@ -141,10 +154,12 @@
             android:layout_weight="18" />
 
         <LinearLayout
+            android:id="@+id/button1"
             style="@style/rhythmBtnStyle"
             android:background="@drawable/btn_1">
 
             <TextView
+                android:id="@+id/tv1"
                 style="@style/rhythmBtnTextStyle"
                 android:text="@string/_1" />
 
@@ -175,22 +190,28 @@
             android:background="@drawable/rhythm_lane2">
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move2_1"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move2_2"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move2_3"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
         </FrameLayout>
 
@@ -200,10 +221,12 @@
             android:layout_weight="18" />
 
         <LinearLayout
+            android:id="@+id/button2"
             style="@style/rhythmBtnStyle"
             android:background="@drawable/btn_2">
 
             <TextView
+                android:id="@+id/tv2"
                 style="@style/rhythmBtnTextStyle"
                 android:text="@string/_2" />
 
@@ -233,22 +256,28 @@
             android:background="@drawable/rhythm_lane3">
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move3_1"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move3_2"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
             <ImageView
-                android:layout_gravity="center_vertical"
+                android:visibility="gone"
+                android:id="@+id/move3_3"
                 android:layout_width="10dp"
                 android:layout_height="54dp"
-                android:background="@drawable/bar_down"/>
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/bar_down" />
 
         </FrameLayout>
 
@@ -258,10 +287,12 @@
             android:layout_weight="18" />
 
         <LinearLayout
+            android:id="@+id/button3"
             style="@style/rhythmBtnStyle"
             android:background="@drawable/btn_3">
 
             <TextView
+                android:id="@+id/tv3"
                 style="@style/rhythmBtnTextStyle"
                 android:text="@string/_3" />
 
