--- a/app/src/main/res/layout/activity_gate.xml
+++ b/app/src/main/res/layout/activity_gate.xml
@@ -33,6 +33,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -120,6 +121,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginBottom="60dp"
                     style="@style/btnBaseStyle1"
                     android:layout_marginTop="34dp">
 
@@ -160,6 +162,16 @@
             </LinearLayout>
 
         </ScrollView>
+
+        <Button
+            android:layout_gravity="start|bottom"
+            android:id="@+id/btnManual"
+            android:layout_margin="20dp"
+            android:layout_width="140dp"
+            android:layout_height="26dp"
+            android:text="@string/manual"
+            android:textColor="#fff"
+            android:background="@drawable/s_btn_common_dialog_btn2" />
 
         <ImageButton
             android:layout_gravity="end|bottom"
