--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -127,7 +127,7 @@
         <item name="android:textSize">24sp</item>
     </style>
 
-    <style name="testWhiteBackLayoutFullMargin20">
+    <style name="whiteBackLayoutFullMargin20">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_gravity">center</item>
@@ -140,7 +140,7 @@
         <item name="android:background">#ffffff</item>
     </style>
 
-    <style name="testBtnCommonBase">
+    <style name="bottomBtnCommonBase">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">30dp</item>
         <item name="android:layout_marginBottom">20dp</item>
@@ -150,7 +150,7 @@
         <item name="android:background">@drawable/s_btn_common_test</item>
     </style>
 
-    <style name="testBtnCommonText">
+    <style name="bottomBtnCommonText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">22sp</item>
