easter 추가, rhythm 여전히 서비스 종료에 문제가 있음2

--- a/app/src/main/res/layout/activity_gate.xml
+++ b/app/src/main/res/layout/activity_gate.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/gateImage"
         android:layout_width="match_parent"
         android:layout_height="132dp"
         android:background="@null"
