--- a/app/src/main/res/layout/activity_drum.xml
+++ b/app/src/main/res/layout/activity_drum.xml
@@ -22,6 +22,14 @@
         android:background="@drawable/s_drum_snare"/>
 
     <ImageButton
+        android:layout_marginTop="200dp"
+        android:layout_marginLeft="70dp"
+        android:id="@+id/hihat_open"
+        android:layout_width="78dp"
+        android:layout_height="78dp"
+        android:background="@drawable/s_drum_hihat_open"/>
+
+    <ImageButton
         android:layout_marginTop="151dp"
         android:layout_marginLeft="90dp"
         android:id="@+id/hihat"
@@ -94,5 +102,40 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/s_check_play"
         android:layout_gravity="start|top"/>
+
+    <LinearLayout
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RadioButton
+                android:id="@+id/rdoS"
+                style="@style/drumRdoBtnStyle"
+                android:checked="true"
+                android:textColor="#000"
+                android:text="@string/s"/>
+
+            <RadioButton
+                android:id="@+id/rdoR"
+                android:layout_marginTop="20dp"
+                style="@style/drumRdoBtnStyle"
+                android:text="@string/r"/>
+
+            <RadioButton
+                android:id="@+id/rdoB"
+                style="@style/drumRdoBtnStyle"
+                android:layout_marginTop="20dp"
+                android:text="@string/b"/>
+
+        </RadioGroup>
+
+    </LinearLayout>
 
 </FrameLayout>
