--- a/app/src/main/res/layout/activity_rhythm_new.xml
+++ b/app/src/main/res/layout/activity_rhythm_new.xml
@@ -90,6 +90,7 @@
             android:layout_weight="1" />
 
         <LinearLayout
+            android:id="@+id/quit"
             android:layout_width="90dp"
             android:layout_height="30dp"
             android:layout_marginRight="29dp"
@@ -98,7 +99,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/quit"
+                android:id="@+id/tv_quit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Quit"
