DrumActivity 수정(기능 추가)

--- a/app/src/main/res/layout/activity_gate.xml
+++ b/app/src/main/res/layout/activity_gate.xml
@@ -3,19 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="700">
 
     <ImageView
         android:id="@+id/gateImage"
         android:layout_width="match_parent"
-        android:layout_height="132dp"
+        android:layout_height="0dp"
+        android:layout_weight="132"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/gate_top_img" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="0dp"
+        android:layout_weight="30"
         android:background="#e5e5e5"
         android:gravity="center"
         android:orientation="horizontal">
@@ -33,7 +36,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="538">
 
         <ScrollView
             android:layout_width="match_parent"
