--- a/app/src/main/res/layout/drum_setting.xml
+++ b/app/src/main/res/layout/drum_setting.xml
@@ -32,13 +32,13 @@
 
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginBottom="20dp"
         android:scrollbars="none">
 
         <LinearLayout
+            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
