--- a/app/src/main/res/layout/activity_test_intro.xml
+++ b/app/src/main/res/layout/activity_test_intro.xml
@@ -104,6 +104,7 @@
                     android:textSize="14sp" />
 
                 <ImageView
+                    android:id="@+id/table"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|center"
